venue layout + fixed scroll on map on mobile

--- a/src/components/venue/style.css
+++ b/src/components/venue/style.css
@@ -71,7 +71,8 @@
   font-weight: 200;
 }
 
-.venue .content .instagram-posts {
+.venue .content .instagram-posts,
+.venue .content .nearby-places {
   margin-top: 5%;
   display: flex;
   flex-direction: column;
@@ -90,8 +91,8 @@
 }
 
 .venue .content .instagram-posts .gallery .thumbnail {
-  max-width: 320px;
-  max-height: 320px;
+  width: 320px;
+  height: 320px;
 }
 
 .venue .content .instagram-posts .gallery .thumbnail img {
@@ -104,9 +105,12 @@
   }
 
   .venue .content {
-    padding: 5%;
     padding-top: 50px;
     width: auto;
+  }
+
+  .venue .content .infos {
+    padding: 5%;
   }
 
   .venue .content .infos h1 {
@@ -125,13 +129,16 @@
     color: black;
   }
 
-  .venue .photo .infos h1,
-  .venue .photo .infos p {
-    display: none;
+  .venue .content .instagram-posts,
+  .venue .content .instagram-empty,
+  .venue .content .nearby-places {
+    padding: 5%;
+    margin-top: 2%;
+    width: auto;
   }
 
-  .venue .content .instagram-posts {
-    margin-top: 5%;
-    width: auto;
+  .venue .content .instagram-posts .gallery .thumbnail {
+    width: 90vw;
+    height: 90vw;
   }
 }
